--- a/docs/config/template/demo-index.template.html
+++ b/docs/config/template/demo-index.template.html
@@ -1,26 +1,33 @@
 <!doctype html>
 <html ng-app="<%= ngModule && ngModule.module || 'ngMaterial' %>">
+
 <head>
-    <title><%= name %></title>
+    <title>
+        <%= name %>
+    </title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
 
     <script src="/node_modules/angular/angular.js"></script>
     <script src="/node_modules/angular-animate/angular-animate.js"></script>
     <script src="/node_modules/angular-aria/angular-aria.js"></script>
     <script src="/node_modules/angular-messages/angular-messages.js"></script>
+    <script src="/node_modules/persian-date/dist/0.1.8b/persian-date-0.1.8b.min.js"></script>
+    <script src="/node_modules/moment/min/moment.min.js"></script>
+    <script src="/node_modules/moment-jalaali/build/moment-jalaali.js"></script>
     <script src="/dist/angular-material.js"></script>
 
     <link rel="stylesheet" href="/dist/angular-material.css">
 
     <% js.forEach(function(file) { %>
-    <script src="<%= file.name %>"></script>
-    <% }); %>
-    <% css.forEach(function(file) { %>
-    <link rel="stylesheet" href="<%= file.name %>">
-    <% }); %>
+        <script src="<%= file.name %>"></script>
+        <% }); %>
+            <% css.forEach(function(file) { %>
+                <link rel="stylesheet" href="<%= file.name %>">
+                <% }); %>
 </head>
 
 <body>
-<%= index.contents %>
+    <%= index.contents %>
 </body>
+
 </html>
